//! 定义容器内外grpc通信的接口
syntax = "proto3";

package container;

option go_package = "./;container";

// 开始准备时的请求参数
message PrepareReq {
  string orgName = 1;
  int64 serial = 2;
}

// 准备完成时的响应
message PrepareRes {}

message FetchReq{}
message FetchRes{}
message AppendReq {
  int32 Type = 1;
  string orgName = 2;
}
// AppendRes 添加值响应
message AppendRes {}
message WatchRes {}

// watch 公开值请求结构体
message WatchReq{
  string orgName = 1;
  int64 serial = 2;
  // 目标节点号
  int64 targetSite = 3;
}



service ControllerService {
  // 准备值
  rpc Prepare(PrepareReq) returns (PrepareRes);
  // 获取值
  rpc Fetch(FetchReq) returns (FetchRes);
  // Append 添加值
  rpc Append(AppendReq) returns (AppendRes);
  // watch完成标记
  rpc Watch(WatchReq) returns (WatchRes);
}